UPDATED cli, nearly finished